# klicker-mcp

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  SETUP.bat  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  release.yml
credentials/: README.md  google-ads-credentials.json.example  google-analytics-credentials.json.example
docs/: AHREFS-SETUP.md  ARCHITECTURE.md  GOOGLE-ADS-SETUP.md  GOOGLE-ANALYTICS-SETUP.md  GOOGLE-TAG-MANAGER-SETUP.md  OPERATIONS.md
scripts/: setup_ahrefs.py  setup_google_ads.py  setup_gtm.py
src/marketing_mcp/: __init__.py  cli.py  coordinator.py  server.py
src/marketing_mcp/tools/: __init__.py  ads.py  ahrefs.py  analytics.py  tagmanager.py
src/marketing_mcp/utils/: __init__.py  cache.py  config.py  logging.py  retry.py
tests/: conftest.py  test_ahrefs.py  test_cache.py  test_cli.py  test_config.py  test_retry.py  test_tools_registry.py
