[project]
name = "marketing-mcp"
version = "1.0.0"
description = "MCP server for Google Analytics, Google Ads, Google Tag Manager, and Ahrefs"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mcp>=0.9.0",
    "google-ads>=24.0.0",
    "google-api-python-client>=2.100.0",
    "google-auth>=2.27.0",
    "requests>=2.31.0",
    "pyyaml>=6.0",
    "pydantic>=2.0",
]

[project.scripts]
marketing-mcp = "marketing_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/marketing_mcp"]